tests/react_16_6/react_16_6.exp
Error ------------------------------------------------------------------------------------------------- Suspense.js:12:3

Cannot create `Suspense` element because property `fallback` is missing in props [1] but exists in object type [2].

   Suspense.js:12:3
    12|   <Suspense /> // Error: fallback is missing in props
          ^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/react.js:253:52
                                                           v
   253|   declare export var Suspense: React$ComponentType<{
   254|     children?: ?React$Node,
   255|     fallback: React$Node,
   256|     maxDuration?: number
   257|   }>; // 16.6+
          ^ [2]


Error ------------------------------------------------------------------------------------------------- Suspense.js:16:3

Cannot create `Suspense` element because string [1] is incompatible with number [2] in property `maxDuration`.

   Suspense.js:16:3
    16|   <Suspense fallback={<Loading />} maxDuration="abc" /> // Error: string is incompatible with number
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   Suspense.js:16:48
    16|   <Suspense fallback={<Loading />} maxDuration="abc" /> // Error: string is incompatible with number
                                                       ^^^^^ [1]
   <BUILTINS>/react.js:256:19
   256|     maxDuration?: number
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Suspense.js:20:3

Cannot create `Suspense` element because in property `fallback`:
 - Either inexact function [1] is incompatible with exact `React.Element` [2].
 - Or function [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in function [1] but exists in `$Iterable` [4].

   Suspense.js:20:3
   20|   <Suspense fallback={Loading} /> // Error: function is incompatible with exact React.Element
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   Suspense.js:7:1
    7| function Loading() {
       ^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:18:5
   18|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:19:5
   19|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:20:5
   20|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------------- lazy.js:12:12

Cannot create `LazyFunctionComponent` element because property `foo` is missing in props [1] but exists in `Props` [2].

   lazy.js:12:12
   12| const _b = <LazyFunctionComponent />; // Error missing foo
                  ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   lazy.js:6:31
    6| function FunctionComponent(x: Props): React.Node { return null }
                                     ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- lazy.js:13:12

Cannot create `LazyFunctionComponent` element because property `bar` is missing in `Props` [1] but exists in props [2].

   lazy.js:13:12
   13| const _c = <LazyFunctionComponent foo={3} bar={3} />; // Error extra bar
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   lazy.js:6:31
    6| function FunctionComponent(x: Props): React.Node { return null }
                                     ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- lazy.js:14:12

Cannot create `LazyFunctionComponent` element because string [1] is incompatible with number [2] in property `foo`.

   lazy.js:14:12
   14| const _d = <LazyFunctionComponent foo="string" />; // Error wrong type for foo
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   lazy.js:14:39
   14| const _d = <LazyFunctionComponent foo="string" />; // Error wrong type for foo
                                             ^^^^^^^^ [1]
   lazy.js:5:22
    5| type Props = {| foo: number |};
                            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- lazy.js:19:12

Cannot create `LazyClassComponent` element because property `foo` is missing in props [1] but exists in `Props` [2].

   lazy.js:19:12
   19| const _f = <LazyClassComponent />; // Error missing foo
                  ^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   lazy.js:7:46
    7| class ClassComponent extends React.Component<Props> {}
                                                    ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- lazy.js:20:12

Cannot create `LazyClassComponent` element because property `bar` is missing in `Props` [1] but exists in props [2].

   lazy.js:20:12
   20| const _g = <LazyClassComponent foo={3} bar={3} />; // Error extra bar
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   lazy.js:7:46
    7| class ClassComponent extends React.Component<Props> {}
                                                    ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- lazy.js:21:12

Cannot create `LazyClassComponent` element because string [1] is incompatible with number [2] in property `foo`.

   lazy.js:21:12
   21| const _h = <LazyClassComponent foo="string" />; // Error wrong type for foo
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   lazy.js:21:36
   21| const _h = <LazyClassComponent foo="string" />; // Error wrong type for foo
                                          ^^^^^^^^ [1]
   lazy.js:5:22
    5| type Props = {| foo: number |};
                            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- memo.js:12:12

Cannot create `MemoComponent` element because property `foo` is missing in props [1] but exists in `Props` [2].

   memo.js:12:12
   12| const _b = <MemoComponent />; // Error missing foo
                  ^^^^^^^^^^^^^^^^^ [1]

References:
   memo.js:7:23
    7| function Component(x: Props): React.Node { return null }
                             ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- memo.js:13:12

Cannot create `MemoComponent` element because property `bar` is missing in `Props` [1] but exists in props [2].

   memo.js:13:12
   13| const _c = <MemoComponent foo={3} bar={3} />; // Error extra bar
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   memo.js:7:23
    7| function Component(x: Props): React.Node { return null }
                             ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- memo.js:14:12

Cannot create `MemoComponent` element because string [1] is incompatible with number [2] in property `foo`.

   memo.js:14:12
   14| const _d = <MemoComponent foo="string" />; // Error wrong type for foo
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   memo.js:14:31
   14| const _d = <MemoComponent foo="string" />; // Error wrong type for foo
                                     ^^^^^^^^ [1]
   memo.js:5:22
    5| type Props = {| foo: number |};
                            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- memo.js:19:12

Cannot create `MemoComponent` element because property `foo` is missing in props [1] but exists in `Props` [2].

   memo.js:19:12
   19| const _f = <MemoComponent />; // Error missing foo
                  ^^^^^^^^^^^^^^^^^ [1]

References:
   memo.js:7:23
    7| function Component(x: Props): React.Node { return null }
                             ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- memo.js:20:12

Cannot create `MemoComponent` element because property `bar` is missing in `Props` [1] but exists in props [2].

   memo.js:20:12
   20| const _g = <MemoComponent foo={3} bar={3} />; // Error extra bar
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   memo.js:7:23
    7| function Component(x: Props): React.Node { return null }
                             ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- memo.js:21:12

Cannot create `MemoComponent` element because string [1] is incompatible with number [2] in property `foo`.

   memo.js:21:12
   21| const _h = <MemoComponent foo="string" />; // Error wrong type for foo
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   memo.js:21:31
   21| const _h = <MemoComponent foo="string" />; // Error wrong type for foo
                                     ^^^^^^^^ [1]
   memo.js:5:22
    5| type Props = {| foo: number |};
                            ^^^^^^ [2]



Found 15 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
